# ata-coder

./: .gitattributes  .gitignore  API.md  ARCHITECTURE.md  AUDIT_TRAIL.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  agent.py  agent_compact.py  agent_controller.py  agent_extension.py  agent_routing.py  agent_session.py  agent_subsystems.py  agent_tools.py  anthropic_client.py  change_tracker.py  clawd_integration.py  codebase_index.py  codecraft_prompt.txt  commands.py  config.py  context_manager.py  deep_link_codebase.md  event_queue.py  extension.py  extension_point.py  fool_proof.py  git_workflow.py  gui.py  llm_client.py  main.py  mcp.example.json  mcp_client.py  memory.py  (+41 more)
.ata_coder/: sessions.json
.ata_coder/sessions/: -20260609-182725.jsonl  -20260610-185035.jsonl  -20260610-185050.jsonl  pritn-20260610-191031.jsonl
.github/workflows/: ci.yml
ata_coder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
commands/: __init__.py  _core.py  _safety.py  _settings.py  _workflow.py
core/: __init__.py  events.py  queue.py  state.py
examples/: 01_basic_chat.py  02_file_operations.py  03_code_search.py  04_skill_demo.py  05_memory_demo.py  06_fool_proof_demo.py  07_privilege_mode.py  08_task_planner.py  09_git_workflow.py  10_full_agent.py  __init__.py  fibonacci.py  run_all.py
extensions/: README.md  __init__.py  community-index.json  hello_skill.py
extensions/sample-formatter/: __init__.py
memory/: MEMORY.md  coding-preferences.md  user-prefs.md
prompts/: auto-mode.md  coding-rules.md  execution-guardrails.md  memory-system.md  output-style.md  safety.md  slash-commands.md  sub-agents.md  system-reminders.md  system.md  tool-policy.md
skills/: security-auditor.json
skills/architect/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/codecraft/: SKILL.md  handler.py
skills/debugger/: SKILL.md  handler.py
skills/doc-writer/: SKILL.md
skills/general-coder/: SKILL.md
skills/math-calculator/: README.md  SKILL.md  handler.py  requirements.txt
skills/math-calculator/prompts/: system.md
skills/math-calculator/resources/: constants.json
skills/math-calculator/tests/: test_handler.py
skills/security-auditor/: SKILL.md
skills/test-writer/: SKILL.md
skills/weather-skill/: .env.example  README.md  handler.py  manifest.json  utils.py  weather_utils.py
skills/weather-skill/prompts/: system_prompt.txt  user_prompt_template.txt
skills/weather-skill/resources/: city_list.json  error_messages.json
skills/weather-skill/tests/: test_handler.py
tests/: conftest.py  test_agent.py  test_anthropic_client.py  test_change_tracker.py  test_codebase_index.py  test_config.py  test_context_manager.py  test_event_queue.py  test_extension.py  test_fibonacci.py  test_fool_proof.py  test_git_workflow.py  test_llm_client.py  test_memory.py  test_memory_project.py  test_model_registry.py  test_performance.py  test_permissions.py  test_plugin_registry.py  test_privilege.py  test_prompt_compressor.py  test_prompt_template.py  test_rag_memory.py  test_safety_guard.py  test_self_correct.py  test_server.py  test_session.py  test_skill_handlers.py  test_stress_torture.py  test_sub_agent.py  test_tools.py  test_utils.py  test_workflow_dsl.py
tools/: __init__.py  definitions.py  executor.py  file_ops.py  result.py  search.py  shell_exec.py  subagent.py  web.py
ts-server/: README.md  package.json  tsconfig.json
ts-server/src/: agent-bridge.ts  change-tracker.ts  cli.ts  config.ts  git-workflow.ts  mcp-bridge.ts  memory-store.ts  permissions.ts  project.ts  safety-guard.ts  server.test.ts  server.ts  session-store.ts  shell-manager.ts  types.ts
ts-server/src/commands/: core.ts
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/css/: style.css
web/js/: app.js
web/ts/: app.ts
workflows/: README.md  ci-pipeline.yaml  code-review.yaml
